--- a/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-II.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-II.json
@@ -13,15 +13,10 @@
     "hasNbsapAdopted"       : "Has your country's revised or updated national biodiversity strategy and action plan been adopted as a policy or a legal instrument, and/or integrated into other strategies?",
     "anticipatedNbsapAdoptionDate"  : "Please specify and indicate the expected date of adoption",
     "policyInstrument"     : "Please indicate how your country's revised or updated national biodiversity strategy and action plan has been adopted",
-    "implementationProgress": "Briefly describe the national biodiversity monitoring system and how it tracks progress in the implementation of the national biodiversity strategy and action plan.",    "headlineIndicators": "Headline Indicators",
-    "binaryIndicators": "Binary Indicators",
-    "componentIndicators": "Component Indicators",
-    "complementaryIndicators": "Complementary Indicators",
-    "otherNationalIndicators": "Other National Indicators",
-    "componentIndicatorsNotLinked": "Would you like to provide data for other component indicators not linked to your country's national targets?",
-    "complementaryIndicatorsNotLinked": "Would you like to provide data for other complementary indicators not linked to your country's national targets?",
+    "implementationProgress": "Briefly describe the national biodiversity monitoring system and how it tracks progress in the implementation of the national biodiversity strategy and action plan.",    
     
     "hasNbsapAdoptedInfo":"Please specify",
     "otherStakeholderInfo":"Please specify other stakeholders",
     "otherPolicyInstrumentInfo":"Please specify other policy instrument"
 }
+
