Updates labels and descriptions in NR7 report
Updates labels and descriptions related to sections and indicator data in the NR7 report to improve clarity and consistency.
Renames "Annex" to "Other information" across the application.
Removes unused translations and updates messages for missing data scenarios.

--- a/i18n/en/components/layout/AppSidebar.json
+++ b/i18n/en/components/layout/AppSidebar.json
@@ -20,7 +20,7 @@
     "sectionIII": "Section III",
     "sectionIV": "Section IV",
     "sectionV": "Section V",
-    "sectionVI": "Section VI",
-    "annex": "Other information",
-    "indicatorData" : "Indicator Data"
+    "otherInformation": "Other information",
+    "otherInformation": "Other information",
+    "indicatorData" : "Indicator data"
 }
