--- a/i18n/en/components/pages/nr7/my-country/edit/indicator-data/missing-data-alert.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/indicator-data/missing-data-alert.json
@@ -1,3 +1,3 @@
 {
-    "noCountryIndicator": "Currently, there is no data submitted by your country for this indicator."
+    "noCountryIndicator": "No data was submitted for this indicator."
 }
