--- a/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-overview.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-overview.json
@@ -23,6 +23,7 @@
     "validate"     : "Validate",
     "publish"     : "Publish",
     "overview" : "Overview",
+    "preview" : "Preview",
     "sectionI": "Section I",
     "briefOverviewOfProcess": "Brief overview of the process of preparation of the report",
     "sectionII": "Section II",
@@ -33,19 +34,23 @@
     "sectionIVDescription": "Assessment of national progress towards the goals and targets of the Kunming-Montreal Global Biodiversity Framework",
     "sectionV": "Section V",
     "conclusionsImplementationConvention": "Conclusions on the national implementation of the Convention and the Kunming-Montreal Global Biodiversity Framework",
-    "annex": "Annex",
-    "informationAsRequested": "Information as requested in related decisions adopted by the Conference of the Parties at its fifteenth meeting",
+    "otherInformation": "Other information",
+    "sectionOtherInfoDescription": "Information as requested in related decisions adopted by the Conference of the Parties at its fifteenth meeting",
     "draftRecords": "Draft records",
     "previewSectionI": "Preview section I",
     "previewSectionII": "Preview section II",
     "previewSectionIII": "Preview section III",
     "previewSectionIV": "Preview section IV",
     "previewSectionV": "Preview section V",
-    "previewSectionANNEX": "Preview section ANNEX",
+    "previewSectionOtherInfo": "Preview section other information",
     "editSectionI": "Edit section I",
     "editSectionII": "Edit section II",
     "editSectionIII": "Edit section III",
     "editSectionIV": "Edit section IV",
     "editSectionV": "Edit section V",
-    "editSectionANNEX": "Edit section ANNEX"
+    "editSectionOtherInfo": "Edit section other information",
+    "notSubmitted" : "Not submitted",
+    "missingIndicatorData" : "Missing indicator data",
+    "missingIndicatorFieldsMessage" : "Please ensure that all records marked in red are completed, as there is still mandatory information missing in some of your record(s).",
+    "missingIndicatorDataMessage" : "You have not yet added any indicator data for following indicators. Please add the data before proceeding."
 }
