--- a/i18n/en/components/pages/nr7/my-country/edit/indicator-data/nr7-view-binary-indicator-data.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/indicator-data/nr7-view-binary-indicator-data.json
@@ -1,4 +1,4 @@
 {
     "comments": "Comments",
-    "binaryIndicatorQuestion": "Your country has not yet provided a response to this binary indicator question."
+    "binaryIndicatorQuestion": "No response was provided to this binary indicator question."
 }
