--- a/i18n/en/pages/national-reports/nr7/my-country/edit/index.json
+++ b/i18n/en/pages/national-reports/nr7/my-country/edit/index.json
@@ -18,8 +18,8 @@
     "assessmentOfProgress2050Goals": "Assessment of progress towards the 2050 goals",
     "sectionV": "Section V",
     "assessmentOfProgressNationalTargets": "Assessment of progress towards national targets and contributions to progress in the 2030 action targets",
-    "sectionVI": "Section VI",
+    "otherInformation": "Other information",
     "conclusionsImplementationConvention": "Conclusions on the implementation of the Convention and the post-2020 global biodiversity framework",
-    "annex": "Annex",
-    "informationAsRequested": "Information as requested in related decisions adopted by the Conference of the Parties at its fifteenth meeting"
+    "otherInformation": "Other information",
+    "sectionOtherInfoDescription": "Information as requested in related decisions adopted by the Conference of the Parties at its fifteenth meeting"
 }
