Adds links to taxonomy

--- a/i18n/en/components/layout/AppHeader.json
+++ b/i18n/en/components/layout/AppHeader.json
@@ -6,5 +6,6 @@
     "menuSearch": "Search",
     "menuHelp": "Help",
     "nationalUsers": "National users",
-    "chm": "CHM"
+    "chm": "CHM",
+    "menuTaxonomy": "Taxonomy"
 }
