Fin binary questions

--- a/i18n/en/app-data/binary-indicator-questions.json
+++ b/i18n/en/app-data/binary-indicator-questions.json
@@ -73,8 +73,8 @@
     "target9_question_1"                       : "Does your country have legal instruments or other policy frameworks or administrative measures for the sustainable management and use of wild species? ",
     "target9_question_2"                       : "Does your country monitor the sustainable management and use of wild species?",
     "target9_question_3"                       : "Does your country monitor the social, economic and environmental benefits derived from the use of wild species for people, in particular those in vulnerable situations and most dependent on biodiversity? (Select all that apply)",
-    "target9_question_4"                       : "If the answer is “fully” or “partially”, disaggregate by all relevant groups of people, as determined at the national level:",
-    "target9_question_5"                       : "Does your country have legal instruments or other policy frameworks to protect and encourage the customary sustainable use of biodiversity by indigenous peoples and local communities, for example, the plan of action on customary sustainable use of biological diversity or other relevant initiatives?",
+    "target9_question_3_1"                     : "If the answer is “fully” or “partially”, disaggregate by all relevant groups of people, as determined at the national level:",
+    "target9_question_4"                       : "Does your country have legal instruments or other policy frameworks to protect and encourage the customary sustainable use of biodiversity by indigenous peoples and local communities, for example, the plan of action on customary sustainable use of biological diversity or other relevant initiatives?",
     "target12_question_1"                      : "Does your country have urban areas under biodiversity-inclusive urban planning that incorporates the management of green or blue spaces for the conservation and sustainable use of biodiversity?",
     "target12_question_2"                      : "Does your country have urban areas under biodiversity-inclusive urban planning incorporating the management of green or blue spaces for ecosystem services and nature’s contributions to people?",
     
