--- a/i18n/en/pages/taxonomy/index.json
+++ b/i18n/en/pages/taxonomy/index.json
@@ -1,1 +1,13 @@
-{}
+{
+    "taxonomy":"Taxonomy",
+    "welcomeToTaxonomy": "The Kunming-Montreal Global Biodiversity Framework (KMGBF) taxonomy", 
+    "gbfTaxonomy":"GBF Taxonomy",
+    "gbfTaxonomyDescription" : "The Kunming-Montreal Global Biodiversity Framework (KMGBF) is a global framework adopted in December 2022 to halt and reverse biodiversity loss by 2030. It sets out goals and targets for the next decade and beyond, aiming to achieve a world living in harmony with nature by 2050. The framework includes 4 goals for 2050 and 23 targets for 2030, with a focus on urgent action to address biodiversity loss. ",
+    "gbfGoals":"GBF Goals",
+    "gbfGoalsDescription" : "The Kunming-Montreal Global Biodiversity Framework (KMGBF) 4 goals for 2050.",
+    "gbfTargets":"GBF Targets",
+    "gbfTargetsDescription" : "The Kunming-Montreal Global Biodiversity Framework (KMGBF) 23 targets for 2030",
+    "gbfIndicators":"GBF Indicators",
+    "gbfIndicatorsDescription" : "The Kunming-Montreal Global Biodiversity Framework (KMGBF) Indicators",
+    "view":"View"
+}
