--- a/i18n/en/components/pages/non-state-actors/intent/edit-intent.json
+++ b/i18n/en/components/pages/non-state-actors/intent/edit-intent.json
@@ -25,10 +25,14 @@
     "authorityDocumentsSection": "Authority letter from head of the organization",
     "authorityDocumentsDescription": "Please upload any document that shows you have the authority to submit a commitment on behalf of your organization.",
     "addAuthorityDocumentHelp": "Simple letter listing the names and emails of the person within the organization that is authorized to use the online reporting tool to communicate commitments as per COP decisions 16/32 Annex II",
+    "authorizedEmails":"Authorized emails",
+    "authorizedEmailsInfo":"Please provide the email addresses of the person(s) within the organization that is authorized to use the online reporting tool to communicate commitments as per COP decisions 16/32 Annex II. This list should match the information provided in the authority letter.",
+
 
     "otherRelevantInformation":"Other relevant information",
     "otherRelevantInformationInfo":"Please use this field to provide any other relevant information that may not have been addressed elsewhere in the record.",
-    "otherRelevantWebsite":"Other relevant website address or attached documents"
+    "otherRelevantWebsite":"Other relevant website address or attached documents",
 
+    
     
 }
