--- a/i18n/en/components/pages/non-state-actors/intent/edit-intent.json
+++ b/i18n/en/components/pages/non-state-actors/intent/edit-intent.json
@@ -21,18 +21,25 @@
     "phones": "Phones",
     "emails": "Emails",
     "websites": "Websites",
+    
+    "jurisdiction": "Jurisdiction",
+    "jurisdictionCountries": "Countries",
+    "jurisdictionRegions": "Regions",
+    "localSubNational": "Local or sub-national name",
+    "jurisdictionDetailsSection": "Geographical scope",
 
     "authorityDocumentsSection": "Authority letter from head of the organization",
+    "authorityDocuments": "Authority document(s)",
     "authorityDocumentsDescription": "Please upload any document that shows you have the authority to submit a commitment on behalf of your organization.",
-    "addAuthorityDocumentHelp": "Simple letter listing the names and emails of the person within the organization that is authorized to use the online reporting tool to communicate commitments as per COP decisions 16/32 Annex II",
+    "authorityDocumentsHelp": "Simple letter listing the names and emails of the person within the organization that is authorized to use the online reporting tool to communicate commitments as per COP decisions 16/32 Annex II",
     "authorizedEmails":"Authorized emails",
-    "authorizedEmailsInfo":"Please provide the email addresses of the person(s) within the organization that is authorized to use the online reporting tool to communicate commitments as per COP decisions 16/32 Annex II. This list should match the information provided in the authority letter.",
+    "authorizedEmailsHelp":"Please provide the email addresses of the person(s) within the organization that is authorized to use the online reporting tool to communicate commitments as per COP decisions 16/32 Annex II. This list should match the information provided in the authority letter.",
 
 
     "otherRelevantInformation":"Other relevant information",
     "otherRelevantInformationInfo":"Please use this field to provide any other relevant information that may not have been addressed elsewhere in the record.",
     "otherRelevantWebsite":"Other relevant website address or attached documents",
 
-    
+    "submitIntentSuccessMessage": "Your intent to submit a commitment has been received by the Secretariat. You will be notified when your request has been accepted on the online reporting tool."
     
 }
