Renames "Non-state actors" to "Stakeholders"
Updates terminology from "Non-state actors" to "Stakeholders" throughout the application.

This change provides a more inclusive and accurate representation of the entities involved. It includes renaming components, routes, and updating i18n translations.

--- a/i18n/en/components/layout/AppSidebar.json
+++ b/i18n/en/components/layout/AppSidebar.json
@@ -23,7 +23,7 @@
     "otherInformation": "Other information",
     "indicatorData" : "Indicator data",
 
-    "nonStateActors": "Non-state actors",
+    "stakeholders": "Stakeholders",
     "allCommitments": "All commitments",
     "menuMyCommitments": "My commitments",
     "menuMyIntents": "My intents"
