Refactors stakeholder commitment and intent forms
Introduces separate components for editing and viewing contact details in stakeholder commitment and intent forms.

Adds language selection to commitment forms and enhances organization type selection with custom value support.

Updates geographical scope thesaurus and limits selectable countries based on jurisdiction.

--- a/i18n/en/components/pages/stakeholders/commitments/edit-commitment.json
+++ b/i18n/en/components/pages/stakeholders/commitments/edit-commitment.json
@@ -1,4 +1,6 @@
 {
+    "stakeholderCommitmentTitle": "Stakeholder Commitment",
+    "submissionLanguage": "Language of submission",
     "general": "General Information",
     "title": "Title of commitment",
     "description": "Description of commitment",
