Implements stakeholder endorsement feature
Adds the ability for national focal points to endorse stakeholder commitments.

This includes:
- API endpoints for retrieving, endorsing, and renouncing commitments
- UI components for displaying and managing endorsements
- Security checks to ensure only authorized users can endorse commitments.

Updates the sidebar to include a link to the user's endorsements.

--- a/i18n/en/components/layout/AppSidebar.json
+++ b/i18n/en/components/layout/AppSidebar.json
@@ -26,5 +26,6 @@
     "stakeholders": "Stakeholders",
     "allCommitments": "All commitments",
     "menuMyCommitments": "My commitments",
-    "menuMyIntents": "My intents"
+    "menuMyIntents": "My intents",
+    "menuMyEndorsements" : "Country endorsements"
 }
