--- a/i18n/en/components/pages/stakeholders/commitments/view-commitment.json
+++ b/i18n/en/components/pages/stakeholders/commitments/view-commitment.json
@@ -1,1 +1,4 @@
-{}
+{
+    "endorsementTitle" : "Endorsements",
+    "endorsementHelp": "The following countries have formally endorsed this commitment."
+}
