Refactors stakeholder endorsements to country reviews
This commit refactors the "stakeholder endorsements" feature to "country reviews" to better reflect its purpose. It renames components, API endpoints, and related text to use "country review" terminology.

The change involves renaming files, components, and API calls related to stakeholder endorsements to align with the new "country review" concept. It updates the data model and user interface to reflect the change in terminology, while maintaining the core functionality of allowing countries to review stakeholder commitments.

The motivation is to provide a more accurate and intuitive representation of the feature's functionality.

--- a/i18n/en/components/layout/AppSidebar.json
+++ b/i18n/en/components/layout/AppSidebar.json
@@ -26,6 +26,6 @@
     "stakeholders": "Stakeholders",
     "allCommitments": "All commitments",
     "menuMyCommitments": "My commitments",
-    "menuMyIntents": "My intents",
-    "menuMyEndorsements" : "Country endorsements"
+    "menuMyIntents": "Credentials",
+    "menuMyCountryReviews" : "Country reviews"
 }
