--- a/i18n/en/components/pages/stakeholders/commitments/view-commitment.json
+++ b/i18n/en/components/pages/stakeholders/commitments/view-commitment.json
@@ -1,4 +1,4 @@
 {
-    "endorsementTitle" : "Endorsements",
-    "endorsementHelp": "The following countries have formally endorsed this commitment."
+    "countryReviewTitle" : "Country reviews",
+    "countryReviewHelp": "The following countries have reviewed this commitment."
 }
