Normalizes disaggregation value to lowercase
Ensures consistent handling of disaggregation data by converting the value to lowercase before comparison.

Adds translations for "yes" and "no" to the indicator data table.

--- a/i18n/en/components/pages/nr7/my-country/view/indicator-data-table.json
+++ b/i18n/en/components/pages/nr7/my-country/view/indicator-data-table.json
@@ -5,5 +5,7 @@
     "doesDisaggregation": "Does this data row represent a disaggregation",
     "disaggregation": "Disaggregation",
     "unit": "Unit",
-    "footnote": "Footnote"
+    "footnote": "Footnote",
+    "yes":"Yes",
+    "no":"No"
 }
