Updates stakeholder commitment country reviews
Refactors stakeholder commitment country review functionality.
- Updates API endpoints to use 'country-reviews' instead of 'endorsements'.
- Modifies the country review action component to align with the new functionality.
- Changes text to reflect published status.
- Fixes issue where title property was required.
- Modifies search result item to return document url.

--- a/i18n/en/components/pages/stakeholders/commitments/country-reviews/country-review-list.json
+++ b/i18n/en/components/pages/stakeholders/commitments/country-reviews/country-review-list.json
@@ -5,7 +5,7 @@
     "updatedOn":"Updated",
     "action" : "Actions",
     "awaitingAction" : "Awaiting action",
-    "reviewed": "Reviewed",
+    "published": "Published",
     "returned": "Returned",
-    "autoApproved": "Auto approved"
+    "autoPublished": "Auto published"
 }
