--- a/i18n/en/components/pages/stakeholders/commitments/country-reviews/my-country-reviews.json
+++ b/i18n/en/components/pages/stakeholders/commitments/country-reviews/my-country-reviews.json
@@ -1,6 +1,6 @@
 {
     "awaitingAction" : "Awaiting action",
-    "reviewed": "Reviewed",
+    "published": "Published",
     "returned": "Returned",
-    "autoApproved": "Auto approved"
+    "autoPublished": "Auto published"
 }
