--- a/i18n/en/components/pages/stakeholders/commitments/view-commitment.json
+++ b/i18n/en/components/pages/stakeholders/commitments/view-commitment.json
@@ -1,4 +1,5 @@
 {
+    "commitmentTitle": "Commitment",
     "countryReviewTitle" : "Country reviews",
     "countryReviewHelp": "The following countries have reviewed this commitment."
 }
