--- a/i18n/en/components/pages/stakeholders/commitments/edit-commitment.json
+++ b/i18n/en/components/pages/stakeholders/commitments/edit-commitment.json
@@ -17,7 +17,7 @@
     "nextStepsInformation": "Share information on plans for next steps",
 
     "performanceInformation": "Key performance indicators or other relevant indicators of measurable success (such as percentages, figures or other quantitative pieces of information, noting links with the indicators from the monitoring framework for the Kunming-Montreal Global Biodiversity Framework, national biodiversity strategies and action plans, and national targets, when applicable)",
-    "endorsementsInformation":"CountryReviews (for example, in the case of a collective commitment by a coalition of organizations, if the commitment has been endorsed by the chief executive officers or governing bodies of the constituent organizations, including traditional authorities)",
+    "endorsementsInformation":"CountryReviews (for example, in the case of a collective commitment by a coalition of organizations, if the commitment has been reviewed by the chief executive officers or governing bodies of the constituent organizations, including traditional authorities)",
     
     "coverageSection": "Geographical coverage of the commitment ",
     "coverageCountries": "Countries",
