Enhances stakeholder commitment review process
Improves the country review process for stakeholder commitments by allowing authorized users to review and return commitments.
Also enhances the edit commitment functionality to allow the modification of contacts for a commitment by using the contact details from the user's credential record.

--- a/i18n/en/components/pages/stakeholders/commitments/country-reviews/country-review-action.json
+++ b/i18n/en/components/pages/stakeholders/commitments/country-reviews/country-review-action.json
@@ -1,4 +1,6 @@
 {
     "review": "Review",
-    "return": "Return"
+    "return": "Return",
+    "reviewError": "Error reviewing the commitment",
+    "returnError": "Error returning the commitment"
 }
