Improves NR7 preview functionality
Enhances the NR7 edit overview to include a hide/show preview toggle.

Adds a scroll-to feature to navigate to the preview section.

Also includes a print action to print the preview.

--- a/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-overview.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-overview.json
@@ -24,6 +24,7 @@
     "publish"     : "Publish",
     "overview" : "Overview",
     "preview" : "Preview",
+    "hidePreview" : "Hide preview",
     "sectionI": "Section I",
     "briefOverviewOfProcess": "Brief overview of the process of preparation of the report",
     "sectionII": "Section II",
