Renames `isPdfing` to `isGeneratingPdf`
Updates the variable name `isPdfing` to `isGeneratingPdf`
for better clarity and consistency in the codebase,
reflecting the actual purpose of the variable.

Also updates related translations to match the new naming.

--- a/i18n/en/components/common/pdf-section.json
+++ b/i18n/en/components/common/pdf-section.json
@@ -1,5 +1,6 @@
 {
+    "preparingPdfTitle": "Generating PDF",
     "pdf": "PDF",
-    "preparePdfing": "Please wait while we prepare the pdf document.",
+    "preparingPdfMessage": "Please wait while we prepare the pdf document.",
     "pdfError": "Error generating PDF document. Please try again."
 }
