English text for stakeholder commitment and credential features
This includes i18n support for managing stakeholder commitments, country reviews and credentials, covering edit, view, and list functionalities.

--- a/i18n/en/components/layout/AppSidebar.json
+++ b/i18n/en/components/layout/AppSidebar.json
@@ -21,6 +21,11 @@
     "sectionIV": "Section IV",
     "sectionV": "Section V",
     "otherInformation": "Other information",
-    "otherInformation": "Other information",
-    "indicatorData" : "Indicator data"
+    "indicatorData" : "Indicator data",
+
+    "stakeholders": "Stakeholders",
+    "allCommitments": "All commitments",
+    "menuMyCommitments": "My commitments",
+    "menuMyIntents": "Credentials",
+    "menuMyCountryReviews" : "Country reviews"
 }
