--- a/i18n/en/components/pages/nr7/my-country/edit/indicator-data/national-indicator-data.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/indicator-data/national-indicator-data.json
@@ -1,6 +1,6 @@
 {
     "noLinkedData": "No linked data",
-    "noLinkedDataDescription": "The following data has wrong indicator code, Indicator code in excel data should match the code the indicator! This data will be ignored.",
+    "noLinkedDataDescription": "The following data has wrong indicator code, Indicator code in excel data should match the code of the indicator! This data will be ignored.",
     "indicatorCode": "Indicator code :",
     "failedValidation": "The following data failed validation! This data will be ignored.",
     "validData": "Valid data"
