--- a/i18n/en/components/pages/stakeholders/commitments/edit-commitment.json
+++ b/i18n/en/components/pages/stakeholders/commitments/edit-commitment.json
@@ -22,8 +22,8 @@
     "endorsementsInformation":"CountryReviews (for example, in the case of a collective commitment by a coalition of organizations, if the commitment has been reviewed by the chief executive officers or governing bodies of the constituent organizations, including traditional authorities)",
     
     "coverageSection": "Geographical coverage of the commitment ",
-    "coverageCountries": "Countries",
-    "coverageRegions": "Regions",
+    "coverageCountries": "Country(s)",
+    "coverageRegions": "Region(s)",
     "coverageOther": "Biome(s) or ecosystem(s)",
 
     "isLinkedToNbsap": "Is the commitment explicitly mentioned in any national biodiversity strategy and action plan?",
