--- a/i18n/en/components/pages/stakeholders/credentials/edit-credential.json
+++ b/i18n/en/components/pages/stakeholders/credentials/edit-credential.json
@@ -32,7 +32,7 @@
     "authorityDocuments": "Authority document(s)",
     "authorityDocumentsDescription": "Please upload any document that shows you have the authority to submit a commitment on behalf of your organization.",
     "authorityDocumentsHelp": "Simple letter listing the names and emails of the person within the organization that is authorized to use the online reporting tool to communicate commitments as per COP decisions 16/32 Annex II",
-    "authorizedEmails":"Authorized emails",
+    "authorizedEmails":"Authorized email(s)",
     "authorizedEmailsHelp":"Please provide the email addresses of the person(s) within the organization that is authorized to use the online reporting tool to communicate commitments as per COP decisions 16/32 Annex II. This list should match the information provided in the authority letter.",
     "signUpInformation": "Please ensure that all users associated with the provided email ID have registered for a CBD account. Users can sign up by visiting the following link",
 
@@ -43,6 +43,7 @@
 
     "submitCredentialSuccessMessage": "Your credential to submit a commitment has been received by the Secretariat. You will be notified when your request has been accepted on the online reporting tool.",
     "yes":"Yes",
-    "no":"No"
+    "no":"No",
+    "andOr":"And/Or"
     
 }
