--- a/i18n/en/components/pages/stakeholders/edit-contact-details.json
+++ b/i18n/en/components/pages/stakeholders/edit-contact-details.json
@@ -17,8 +17,9 @@
     "websites": "Websites",
     
     "jurisdiction": "Jurisdiction",
-    "jurisdictionCountries": "Countries",
-    "jurisdictionRegions": "Regions",
+    "countryRegion": "Country/Region",
+    "jurisdictionCountries": "Country(s)",
+    "jurisdictionRegions": "Region(s)",
     "localSubNational": "Local or sub-national name",
     "jurisdictionDetailsSection": "Geographical scope",
     "jurisdictionDetailsInfo": "Geographical scope of organization or coalition (indicate whether the organization or coalition operates at the local, subnational, national, regional or multinational level and provide a list of locations whenever possible)."
