Adds NBSAP count to regional group progress table
Improves the NBSAP analyzer by adding a column to the regional group progress table, displaying the NBSAP count for each region.
This provides a more comprehensive view of regional progress.

--- a/i18n/en/components/pages/nbsaps/nbsap-analyzer.json
+++ b/i18n/en/components/pages/nbsaps/nbsap-analyzer.json
@@ -6,6 +6,7 @@
     "progressByCBDRegions": "Progress by CBD regions",
     "numberOfParties": "Number of Parties by CBD regional groups",
     "partyCount": "Party count",
+    "nbsapCount": "NBSAP count",
     "total": "Total",
     "progressByParties": " Progress by parties",
     "party": "Party",
