Hides indicator code in data table
Adds an option to hide the indicator code column in the data table.
This simplifies the table view in contexts where the indicator code
is already known or not relevant to the user.

--- a/i18n/en/components/pages/nr7/my-country/view/indicator-data-table.json
+++ b/i18n/en/components/pages/nr7/my-country/view/indicator-data-table.json
@@ -3,6 +3,7 @@
     "value"             : "Value",    
     "indicatorCode": "Indicator code",
     "doesDisaggregation": "Does this data row represent a disaggregation",
+    "shortDoesDisaggregation": "Has disaggregation",
     "disaggregation": "Disaggregation",
     "unit": "Unit",
     "footnote": "Footnote",
