Implements email verification flow
Adds a modal to inform users about pending email verification.
The modal displays when the user is authenticated but their
email is not yet verified, prompting them to resend the
activation link.
This ensures users are aware of the email verification
requirement before submitting any data.

--- a/i18n/en/components/layout/AppHeaderDropdownAccnt.json
+++ b/i18n/en/components/layout/AppHeaderDropdownAccnt.json
@@ -4,5 +4,9 @@
     "emailAlerts": "Email Alerts",
     "profile": "Profile",
     "sessionExpiredTitle":"Session expired",
-    "sessionExpiredDescription":"Your session has expired. Please sign in again."
+    "sessionExpiredDescription":"Your session has expired. Please sign in again.",
+
+    "emailVerificationPendingTitle":"Email verification pending",
+    "emailVerificationPendingDescription":"Email verification pending. Please verify you email before submitting any data. Please click on the verification link sent on your email",
+    "resend": "Resend activation link"
 }
