Implements email verification flow (#196)
Adds a modal to inform users about pending email verification. The modal displays when the user is authenticated but their email is not yet verified, prompting them to resend the activation link.
This ensures users are aware of the email verification requirement before submitting any data.

--- a/i18n/en/components/layout/AppHeaderDropdownAccnt.json
+++ b/i18n/en/components/layout/AppHeaderDropdownAccnt.json
@@ -4,5 +4,9 @@
     "emailAlerts": "Email Alerts",
     "profile": "Profile",
     "sessionExpiredTitle":"Session expired",
-    "sessionExpiredDescription":"Your session has expired. Please sign in again."
+    "sessionExpiredDescription":"Your session has expired. Please sign in again.",
+
+    "emailVerificationPendingTitle":"Email verification pending",
+    "emailVerificationPendingDescription":"Please verify your email before submitting any data. Click on the verification link sent to your email.",
+    "resend": "Resend activation link"
 }
