Enables custom field selection for downloads
Allows users to select specific fields to include in the download.
Adds a modal for custom field selection and updates the download
process to use the selected fields.

--- a/i18n/en/app-data/download-schemas.json
+++ b/i18n/en/app-data/download-schemas.json
@@ -5,6 +5,7 @@
     "government"                      : "Government",
     "title"                           : "National target title",
     "description"                     : "Description",
+    "summary"                         : "Summary",
     "mainPolicyOfMeasureOrActionInfo" : "Main policy measures",
     "contributionToGoals"             : "Global Goals",
     "targetsAlignment"                : "Global targets",
