Adds disaggregation type to indicator data
Adds a disaggregation type field to indicator data, allowing for more detailed categorization.

Updates the data import and display components to accommodate the new field, enhancing data granularity and reporting capabilities.

--- a/i18n/en/components/pages/nr7/my-country/edit/indicator-data/nr7-view-indicator-data.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/indicator-data/nr7-view-indicator-data.json
@@ -14,6 +14,7 @@
     "data" : "Data",
     "indicatorCode": "Indicator code",
     "doesDisaggregation": "Does this data row represent a disaggregation",
+    "disaggregationType": "Disaggregation type",
     "disaggregation": "Disaggregation",
     "unit": "Unit",
     "footnote": "Footnote",
