--- a/i18n/en/components/pages/nr7/my-country/view/indicator-data-table.json
+++ b/i18n/en/components/pages/nr7/my-country/view/indicator-data-table.json
@@ -4,6 +4,7 @@
     "indicatorCode": "Indicator code",
     "doesDisaggregation": "Does this data row represent a disaggregation",
     "shortDoesDisaggregation": "Has disaggregation",
+    "disaggregationType": "Disaggregation type",
     "disaggregation": "Disaggregation",
     "unit": "Unit",
     "footnote": "Footnote",
