Adds landlocked country question to Target 1
Adds a question to determine if a country is landlocked,
assisting in the biodiversity-inclusive spatial planning assessment
for Target 1.

--- a/i18n/en/app-data/binary-indicator-questions.json
+++ b/i18n/en/app-data/binary-indicator-questions.json
@@ -52,6 +52,7 @@
     "goalB_question2"                          : "Does your country have policies and/or action plans aimed at ensuring the sustainable use of biodiversity?",
     "goalB_question3"                          : "Does your country monitor the sustainable use of biodiversity?",
     "goalB_question4"                          : "Does your country monitor the maintenance, restoration and enhancement of nature's contributions to people, including ecosystem functions and services for the benefit of present and future generations?",
+    "target1_question_1_add"                   : "Is your country landlocked?",
     "target1_question_1"                       : "Are all areas of your country under biodiversity-inclusive spatial planning or effective management processes that:",
     "target1_question_1_a"                     : "Address land-use (terrestrial) change?",
     "target1_question_1_b"                     : "Address land-use (inland water) change?",
