feat(nr7): display indicator title in view components

--- a/i18n/en/components/pages/nr7/my-country/edit/indicator-data/nr7-add-binary-indicator-data.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/indicator-data/nr7-add-binary-indicator-data.json
@@ -3,6 +3,6 @@
     "addBinaryIndicatorData"  : "Add response",
     "general": "General",
     "government": "Government",
-    "selectLanguages": "Please select in which language(s) you wish to submit this record"
-
-}
+    "selectLanguages": "Please select in which language(s) you wish to submit this record",
+    "indicator": "Indicator"
+}  
